# CPT-180-27-Assignment-5-Structures

./: CMakeLists.txt  README.md  main.cpp
Assignment _5/: CMakeLists.txt  main.cpp  main.h  reader.cpp
config_generator/: CMakeLists.txt  Config.txt  ConfigOutput.txt  backup.txt  config.h  config_generator.h  configheader.h  main.cpp  main.h  structures_header.h
config_generator/config/: app.cfg
config_generator/lib/: config.h
config_reader_lib/: Assignment3-Libraries.h  CMakeLists.txt  config.cpp  config.h  configreader.cpp  library.h  main.cpp  reader.cpp  reader.h
config_reader_lib/driver/: CMakeLists.txt  main.cpp
config_reader_lib/lib/: libraries.h
config_reader_lib/libraries/: main.cpp
